[package]
name = "dioxus-helmet"
version = "0.2.4"
authors = ["Saicu"]
edition = "2021"
description = "Small Dioxus component which allows you to place elements in the head of your document"
license = "MIT"
repository = "https://github.com/saicu/dioxus-helmet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
web-sys = { version = "0.3.59", features = ["Document", "Window", "Element", "HtmlHeadElement", "HtmlCollection", "NamedNodeMap", "NodeList"] }
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
js-sys = "0.3.59"
