[package]
name = "dioxus-helmet"
version = "0.3.0"
authors = ["Saicu", "painedpineapple"]
edition = "2021"
description = "Small Dioxus component which allows you to place elements in the head of your document"
license = "MIT"
repository = "https://github.com/ranger-finance/dioxus-helmet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
dioxus = { version = "0.5.1" }
web-sys = { version = "0.3.59", features = ["Document", "Window", "Element", "HtmlHeadElement", "HtmlCollection", "NamedNodeMap", "NodeList"] }
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
js-sys = "0.3.59"
